kubernetes/jabeh-staging/07-07-ingress-beanstalkd.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jabeh-staging-beanstalkd-ingress
  namespace: jabeh-staging
  annotations:
    ingress.kubernetes.io/proxy-body-size: 32m
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: auth
    ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  rules:
    - host: beanstalk.staging.jabeh.com
      http:
        paths:
          - path: /
            backend:
              serviceName: jabeh-staging-beanstalkd-service
              servicePort: 80
